force-app/main/default/objects/Approval_Configuration__c/Approval_Configuration__c.object-meta.xml
<CustomObject>
    <label>Approval Configuration</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Approval Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>