force-app/main/default/objects/Approval_Configuration__c/fields/Approval_Process_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_API_Name__c</fullName>
    <label>Approval Process API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>