force-app/main/default/objects/Approval_Configuration__c/fields/Approved_Status_Value__c.field-meta.xml
<CustomField>
    <fullName>Approved_Status_Value__c</fullName>
    <label>Approved Status Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>