force-app/main/default/objects/Approval_Configuration__c/fields/Matching_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Matching_Criteria__c</fullName>
    <description>JSON containing matching criteria (field conditions, profile, role) that determine when this approval config applies to specific records.</description>
    <label>Matching Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>