force-app/main/default/objects/Approval_Configuration__c/fields/On_Approval_JSON__c.field-meta.xml
<CustomField>
    <fullName>On_Approval_JSON__c</fullName>
    <label>On Approval JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>