force-app/main/default/objects/Approval_Configuration__c/fields/On_Rejection_JSON__c.field-meta.xml
<CustomField>
    <fullName>On_Rejection_JSON__c</fullName>
    <label>On Rejection JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>