force-app/main/default/objects/Approval_Configuration__c/fields/Pending_Status_Value__c.field-meta.xml
<CustomField>
    <fullName>Pending_Status_Value__c</fullName>
    <label>Pending Status Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>