force-app/main/default/objects/Approval_Configuration__c/fields/Prerequisite_Process_Type__c.field-meta.xml
<CustomField>
    <fullName>Prerequisite_Process_Type__c</fullName>
    <label>Prerequisite Process Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>