force-app/main/default/objects/Approval_Configuration__c/fields/Prerequisite_Status_Value__c.field-meta.xml
<CustomField>
    <fullName>Prerequisite_Status_Value__c</fullName>
    <label>Prerequisite Status Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>