force-app/main/default/objects/Approval_Configuration__c/fields/Process_Label__c.field-meta.xml
<CustomField>
    <fullName>Process_Label__c</fullName>
    <label>Process Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>