force-app/main/default/objects/Approval_Configuration__c/fields/Rejected_Status_Value__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Status_Value__c</fullName>
    <label>Rejected Status Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>