force-app/main/default/objects/Approval_Configuration__c/fields/Required_Fields_JSON__c.field-meta.xml
<CustomField>
    <fullName>Required_Fields_JSON__c</fullName>
    <label>Required Fields JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>