force-app/main/default/objects/Approval_Configuration__c/fields/Status_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Status_Field_API_Name__c</fullName>
    <label>Status Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>